--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0.0",
     "author": "LuckFire#48000",
     "theme": "indicators.css",
-    "_theme_comment": "If you don't want to use the importing, change this to ./src/source.css (but note that you will no longer get automatic updating.)",
+    "_theme_comment": "If you don't want to use the importing, change theme to ./src/source.css (but note that you will no longer get automatic updating.)",
     "consent": "false",
     "license": "MIT"
 }
