--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Better Channel Indicators",
+    "name": "Modern Channel Indicators",
     "description": "Adds a nice touch to Discord's current channel indicators.",
     "version": "1.3.0",
     "author": "LuckFire#4800",
