--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "description": "Updates Discord's indicators to feel more modern.",
     "version": "2.0.0",
     "author": "LuckFire",
-    "theme": "./src/index.scss",
+    "theme": "./src/source.scss",
     "consent": "true",
     "license": "MIT"
 }
