chore: update replugged dependency

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "theme-template",
+  "name": "modern-indicators",
   "version": "2.1.4",
-  "description": "A theme template",
+  "description": "Updates Discord's indicators to feel more modern.",
   "engines": {
     "node": ">=18.0.0"
   },
@@ -10,17 +10,16 @@
     "watch": "replugged build theme --watch",
     "bundle": "replugged bundle theme",
     "lint": "prettier ./src --check",
-    "lint:fix": "prettier ./src --write"
+    "lint:fix": "prettier ./src --write",
+    "release": "replugged release"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@parcel/config-default": "^2.9.2",
     "@parcel/core": "^2.9.2",
     "@parcel/transformer-sass": "^2.9.2",
     "@types/node": "^18.16.17",
     "prettier": "^2.8.8",
-    "replugged": "4.0.0-beta0.25"
+    "replugged": "^4.6.0"
   }
 }
